# inclusive-maker

./: .gitignore  LICENSE  README.md  apply_command_mapper.py  apply_tk_ui.py  pyproject.toml  requirements-core.txt  requirements-hardware.txt  requirements-ui.txt  requirements.txt  run_app.py  run_inclusive_maker.bat  setup.py  test_unicorn.py
.github/workflows/: ci.yml
config/: commands.yaml  default.yaml  unicorn.yaml
docs/: accessibility.md  architecture.md  collaborators.md  external_resources.md  gpype_bci.md  hackster_template.md  interview_guide.md  journal.md  project_context.md  requirements_spec.md  setup.md  setup_windows_unicorn.md
frontend/: README.md  dashboard_app.py  inclusive_app.py  inclusive_app_tk.py  training_app.py
hardware/: README.md  mock_hand_server.py
notebooks/: 01_exploration_signal.ipynb
scripts/: activate_gpype_license.py  calibrate.py  calibration_assistant.py  check_env.py  check_unicorn_sdk.py  demo_alpha_command.py  demo_full_pipeline.py  demo_lsl_command.py  diagnose_connection.py  diagnose_gui.py  diagnose_sensors.py  gpype_dashboard.py  gpype_pipeline.py  install.bat  install.sh  install_unicorn_sdk.bat  log_viewer.bat  log_viewer.py  record_eeg.py  run_server.py  train_model.py
src/inclousive_maker/: __init__.py
src/inclousive_maker/acquisition/: unicorn_connector.py
src/inclousive_maker/remote_command/: __init__.py  client.py
src/inclousive_maker/shared/: logger.py  (+2 more)
src/inclusive_maker/: __init__.py
tests/: __init__.py  test_acquisition.py  test_brain_algo.py  test_remote_command.py  test_signal_processing.py
(+22 files in other folders)
