[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inclusive-maker"
version = "0.1.0"
description = "Projet étudiant de commande cérébrale à distance"
authors = [{name = "inclusive Maker Team"}]
requires-python = ">=3.10"
dependencies = [
    "gpype>=3.0.9",
    "pylsl>=1.16.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7.0", "pyqtgraph>=0.13.0", "PySide6>=6.5.0"]
dev = ["pytest>=7.4.0"]
